packages/ui-toolkit/02-tools/tools-spacing/index.scss
// @import 'tools-spacing/tools.get-shirt-size';
// @import 'tools-spacing/tools.calculate-sizes';
// @import 'tools-spacing/tools.normalize-spacing-name';
@import 'tools.contains-falsy';
@import 'tools.normalize-spacing-sizes';
@import 'tools.collapse-directionals';
@import 'tools.directional-property';
@import 'tools.spacing-margin';
@import 'tools.spacing-padding';

/*
 * Generate default spacing scale, based off of the base font size
 **/
@function _bolt-create-spacing-map($sizes, $char: '') {
  $map: ();
  @each $name, $value in $sizes {
    $keyName: $name;
    @if ($char != '' and $keyName != null){
      $keyName: $char + $keyName;
    }
    $keyValue: $value * $bolt-spacing-gutter;
    $map: map-merge($map, ($keyName: $keyValue));
  }
  @return $map;
}
$bolt-spacing-sizes: _bolt-create-spacing-map($bolt-spacing-values);
// @debug $bolt-spacing-sizes;
/*
 * CONVENIENCE FUNCTIONS
 **/
@function spacing($size) {
  @return map-get($bolt-spacing-sizes, nth($size, 1));
}


// Convert shirt sizes in baseline-optimized sizes
@function v-spacing($sizes, $modifier) {
  @if ($modifier == 'squish' or $modifier == 'squished') {
    $modifier: $bolt-spacing-squished;
  } @elseif ($modifier == 'stretch' or $modifier == 'stretched') {
    $modifier: $stretched_RATIO;
  } @else {
    $modifier: 1;
  }

  @return (spacing($sizes) / strip-unit($bolt-spacing-gutter)) * $bolt-spacing-leading * $modifier;
}

// Alias for v-spacing function
@function vertical-spacing($size) {
  @return v-spacing($size);
}


// @mixin spacing(){
//   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
//   $sizes: nth($sizes, 1) null null null;
//   @include _bolt-directional-property(padding, false, $sizes, $important);
// }
// @debug $bolt-spacing-directions;

//

// /*
//  * MIXINS
//  **/
// @mixin padding($spacing-sizes, $spacing-type: null, $important: null) {
//   $sizes: _bolt-normalize-spacing-sizes($spacing-sizes, $spacing-type);
//   @include _bolt-directional-property(padding, false, $sizes, $important);
// }
//
// @mixin margin($spacing-sizes, $spacing-type: null, $important: null) {
//   $sizes: _bolt-normalize-spacing-sizes($spacing-sizes, $spacing-type);
//   @include _bolt-directional-property(margin, false, $sizes, $important);
// }
//
// @mixin spacing()
//
//
// @mixin _bolt-spacing-inset-squish($size, $important) {
//   @include _bolt-spacing-inset(($size, squished), $important);
// }
//
// @mixin _bolt-inset-stretch($size, $important) {
//   @include _bolt-spacing-inset(($size, stretched), $important);
// }
//
//
//
// @mixin padding($sizes, $important: null) {
//   @include _bolt-spacing-inset($sizes, $important);
// }
//
// @mixin padding-top($size, $important: null) {
//   padding-top: v-spacing($size) $important;
// }
//
// @mixin padding-bottom($size, $important: null) {
//   padding-bottom: v-spacing($size) $important;
// }
//
// @mixin padding-right($size, $important: null) {
//   padding-right: spacing($size) $important;
// }
//
// @mixin padding-left($size, $important: null) {
//   padding-left: spacing($size) $important;
// }





// @mixin stack($level, $isImportant: false) {
//   margin-bottom: spacing-level($level) if($isImportant, !important, null);
// }
//
// @mixin inline($level, $isImportant: false) {
//   margin-right: spacing-level($level) if($isImportant, !important, null);
// }


.c-button {
  // @include _bolt-spacing-inset(small squished);
}

.c-button {
  @include padding(small);
}
//
// .c-button {
//   padding-top: v-spacing(small, squished);
//   padding-bottom: v-spacing(small, squished);
//   padding-left: spacing(small);
//   padding-right: spacing(small);
// }
//
// .c-button {
//   @include padding-top(small);
//   @include padding-bottom(small);
//   @include padding-left(small);
//   @include padding-right(small);
//
//   position: relative;
//   right: spacing(medium) * -1;
// }

// .c-button {
//   @include padding(10px);
//   @include padding-top(small);
// }

// .u-padding,
// .u-padding-medium {
//   @include padding(medium, null, important);
// }

// .u-padding-squished,
// .u-padding-medium-squished {
//   @include padding(medium, squished, important);
// }




// //
// .u-inset {
//   @include _bolt-spacing-inset(medium, important);
// }
//
// .u-inset-small-squish {
//   @include _bolt-spacing-inset(small, important);
// }
//
// .u-inset-large {
//   @include _bolt-spacing-inset(large, important);
// }
// //
// .u-inset-squish {
//   @include _bolt-spacing-inset-squish(medium, important);
// }
//
// .u-inset-large-squish {
//   @include _bolt-spacing-inset-squish(large, important);
// }
//
// .u-inset-stretch {
//   @include _bolt-spacing-inset-stretch(medium, important);
// }
//
// .u-inset-large-stretch {
//   @include _bolt-spacing-inset-stretch(large, important);
// }
// //
// // .u-inset-large {
// //   @include _bolt-spacing-inset(large, important);
// // }
//
// p:after {
//   $size: spacing(large);
//   content: "#{$size}";
//
//   display: block;
//   color: black;
// }

